# Zenith-dataplane

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TUTORIAL.md  demo_app.py
.github/workflows/: ci.yml
bench/: tick_generator.py
cli/: Cargo.toml
cli/src/: main.rs
config/: zenith.toml
control-plane/: Cargo.toml  README.md
control-plane/src/: main.rs  models.rs
core/: Cargo.toml
core/src/: admin_api.rs  engine.rs  error.rs  event.rs  lib.rs  ring_buffer.rs  wasm_host.rs
dashboard/: README.md  index.html
dataplane/: Cargo.toml  README.md
dataplane/src/: lib.rs  pipeline.rs  processor.rs  router.rs
docs/: API_SPEC.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  CLIENT_PROPOSAL.md  IMPLEMENTATION_REPORT.md  RESEARCH_ANALYSIS.md  TUTORIAL.md
examples/: validate_demo.py
ffi-bindings/: README.md
huggingface/: README.md  app.py  requirements.txt
infra/: Dockerfile  docker-compose.yml
plugins/ai_preprocessing/: README.md
plugins/simple_filter/: Cargo.toml
schema-generator/: gen_schema.py
scripts/: start_all.sh
sdk-go/: client.go
storage/: Cargo.toml  README.md
storage/src/: lib.rs
tests/: README.md  run_e2e.sh  test_integration.py
tools/: README.md  benchmark.py  build_plugin.sh  inspector.py
zenith-bench/: Cargo.toml
zenith-bench/src/: cpu.rs  lib.rs  main.rs  report.rs  synthetic.rs
zenith-proto/: Cargo.toml  zenith.proto
zenith-proto/src/: lib.rs
zenith-runtime-cpu/: Cargo.toml
zenith-runtime-cpu/benches/: numa_allocator.rs  ringbuffer.rs
zenith-runtime-cpu/src/: allocator.rs  buffer.rs  (+7 more)
zenith-runtime-gpu/: Cargo.toml
zenith-runtime-gpu/src/: collective.rs  config.rs  device.rs  kernel.rs  lib.rs  memory.rs
zenith-scheduler/: Cargo.toml
(+12 files in other folders)
